# local-planner-benchmark

./: README.md
src/fleet_dispatcher/: package.xml  setup.cfg  setup.py
src/fleet_dispatcher/fleet_dispatcher/: dispatcher.py  waypoints.py
src/gui/: package.xml
src/gui/gui/: main.py
src/main_bot/: package.xml
src/main_bot/config/: controllers.yaml  nav2_dwb.yaml  nav2_mppi.yaml  nav2_robot1.yaml  nav2_robot2.yaml  nav2_rpp.yaml  nav2_teb.yaml  slam.yaml
src/main_bot/description/: lidar.xacro  robot.urdf.xacro  robot_main.xacro  ros2_controller.xacro
src/main_bot/launch/: multi_robot.launch.py  nav2.launch.py  rz.launch.py
src/main_bot/maps/: warehouse.pgm  warehouse.yaml
src/main_bot/rviz/: multi_robot_view.rviz  nav2_view.rviz
src/main_bot/worlds/: warehouse.sdf
